--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
+    "aws-amplify": "^4.3.13",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
