--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^2.10.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
-    "aws-amplify": "^4.3.13",
+    "aws-amplify": "^4.3.16",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
