--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -15,6 +15,12 @@
           "additionalAuthenticationProviders": [
             {
               "authenticationType": "AWS_IAM"
+            },
+            {
+              "authenticationType": "AMAZON_COGNITO_USER_POOLS",
+              "userPoolConfig": {
+                "userPoolId": "authdgm4790examplec73e0e5c"
+              }
             }
           ]
         }
