Still trying to get auth consistent

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -24,7 +24,16 @@
             }
           ]
         }
-      }
+      },
+      "dependsOn": [
+        {
+          "category": "auth",
+          "resourceName": "dgm4790examplec73e0e5c",
+          "attributes": [
+            "UserPoolId"
+          ]
+        }
+      ]
     }
   },
   "auth": {
