More fiddling to get instant sync happening - didn't work

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -2,7 +2,7 @@
   "providers": [
     "awscloudformation"
   ],
-  "projectName": "dgm4790example",
+  "projectName": "DGM4790Example",
   "version": "3.1",
   "frontend": "javascript",
   "javascript": {
